add example for target switching

--- a/xframe/target-test.html
+++ b/xframe/target-test.html
@@ -11,7 +11,8 @@
     <form name="cc1.1"
           id="cc1"
           action="../destination.html"
-          method="get">
+          method="get"
+          target="cc-name-iframe">
       <!-- Name on card: <input autofocus=""
          type="text"
          name="name"
@@ -21,6 +22,7 @@
               frameborder="1"
               scrolling="no"
               id="cc-name-iframe"
+              name="cc-name-iframe"
               class="iframe-container"></iframe><br />
       iframe 2<br />
       <iframe src="cc-number.html"
