user target src file

--- a/xframe/target-test.html
+++ b/xframe/target-test.html
@@ -14,7 +14,7 @@
           method="get"
           target="target-frame">
       Submission target frame<br />
-      <iframe srcdoc="<body>empty</body>"
+      <iframe src="target.html"
               frameborder="1"
               scrolling="no"
               id="target-frame"
