fix address fields

--- a/address-forms.html
+++ b/address-forms.html
@@ -2,15 +2,15 @@ Address Form <br>
 
 Really small address form with only a name in it <br>
 <form name="nameonly-address-form" id="nameonly-address-form" action="destination.html" method="get">
-  Name: <input type="text" name="name" placeholder="Name"><br>
+  Name: <input type="text" name="name" placeholder="Name" autocomplete="name"><br>
 </form>
 
 Really small address form with only an address in it <br>
 <form name="addressonly-address-form" id="addressonly-address-form" action="destination.html" method="get">
-  Address: <input type="text" name="address" placeholder="Address"><br>
+  Address: <input type="text" name="address" placeholder="Address" autocomplete="address-line1"><br>
 </form>
 
 Really small address form with only a city in it <br>
 <form name="cityonly-address-form" id="cityonly-address-form" action="destination.html" method="get">
-  City: <input type="text" name="city" placeholder="City"><br>
+  City: <input type="text" name="city" placeholder="City" autocomplete="city"><br>
 </form>
