more address fields

--- a/address-forms.html
+++ b/address-forms.html
@@ -2,15 +2,39 @@ Address Form <br>
 
 Really small address form with only a name in it <br>
 <form name="nameonly-address-form" id="nameonly-address-form" action="destination.html" method="get">
-  Name: <input type="text" name="name" placeholder="Name" autocomplete="name"><br>
-</form>
+  <label for="name">Name:</label>
+  <input type="text" name="name" placeholder="Name" autocomplete="name"><br>
+</form><br>
 
 Really small address form with only an address in it <br>
 <form name="addressonly-address-form" id="addressonly-address-form" action="destination.html" method="get">
-  Address: <input type="text" name="address" placeholder="Address" autocomplete="address-line1"><br>
-</form>
+  <label for="address">Address:</label>
+  <input type="text" name="address" placeholder="Address" autocomplete="address-line1"><br>
+</form><br>
 
 Really small address form with only a city in it <br>
 <form name="cityonly-address-form" id="cityonly-address-form" action="destination.html" method="get">
-  City: <input type="text" name="city" placeholder="City" autocomplete="city"><br>
-</form>
+  <label for="city">City:</label>
+  <input type="text" name="city" placeholder="City" autocomplete="city"><br>
+</form><br>
+
+Really small address form with only a state in it <br>
+<form name="stateonly-address-form" id="stateonly-address-form" action="destination.html" method="get">
+  <label for="state">State:</label>
+  <input type="text" name="state" id="state" placeholder="State" autocomplete="region"><br>
+</form><br>
+
+Really small address form with only a zip code in it <br>
+<form name="ziponly-address-form" id="ziponly-address-form" action="destination.html" method="get">
+  <label for="zipcode">Zip:</label>
+  <input type="text" name="zipcode" id="zipcode" placeholder="Zipcode" autocomplete="postal-code"><br>
+</form><br>
+
+Really small address form with only a country in it <br>
+<form name="countryonly-address-form" id="countryonly-address-form" action="destination.html" method="get">
+  <label for="country">Coutry:</label>
+  <input type="text" name="country" placeholder="Country" autocomplete="country"><br>
+</form><br>
+
+<!-- Company: <input name="company" id="form_company" placeholder="company"> <br>
+Email: <input name="email" id="form_email" placeholder="Email"> <br> -->
