fix address form

--- a/xframe/address-form-xframe.html
+++ b/xframe/address-form-xframe.html
@@ -18,7 +18,7 @@ One field and iframe per form <br>
 <iframe src="address-name.html" class="iframe-container"></iframe><br>
 </form><br>
 
-<form id="address-addressline-form"></form>
+<form id="address-addressline-form">
 <iframe src="address-addressline.html" class="iframe-container"></iframe><br>
 </form><br>
 
