single email login form

--- a/single-email-field-login.html
+++ b/single-email-field-login.html
@@ -1,8 +1,9 @@
 <html>
 <body>
-<form>
+<form method="get" action="/destination.html">
     <label for="email">Email: </label>
-    <input type="text" autocomplete="email" name="email"></input>
+    <input type="text" autocomplete="email" name="email" /><br>
+    <button type="submit">Submit</button>
 </form>
 </body>
 </html>
