full address form

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+<h1>HELLO! would you like to test autofilling forms :) </h1>
+
+<ul>
+    <li><a href="full-address-form.html">Full Address Form</a></li>
+</ul>
