Autologin test page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 Autofill correctly detects submission when the browser's default behavior is blocked.</span>
         </li>
         <li>
+            <a href="autologin-form.html">autologin-form.html</a>
+            <span class="description"><strong>Auto-Submission</strong>: A login form designed to satisfy Password Manager
+                auto-submission heuristics (username + password, ignoring intervening checkbox, no subsequent fields).</span>
+        </li>
+        <li>
             <a href="big-address-form.html">big-address-form.html</a>
             <span class="description"><strong>Comprehensive Address</strong>: A standard, large layout containing all
                 typical address fields (Name, Lines 1-3, City, State, Zip, Country) to verify full-profile
