--- a/autologin-form.html
+++ b/autologin-form.html
@@ -4,12 +4,26 @@
 <head>
   <title>Auto-Submit Test</title>
   <script>
+    function logSubmission(source) {
+      document.getElementById('result').innerText = 'Form Submitted! (' + source + ')';
+      document.getElementById('result').style.color = 'green';
+      console.log('Form Submitted via ' + source);
+    }
+
     function handleSubmit(event) {
       event.preventDefault();
-      document.getElementById('result').innerText = 'Form Submitted!';
-      document.getElementById('result').style.color = 'green';
-      console.log('Form Submitted!');
+      logSubmission('onsubmit event');
+      event.target.reset();
     }
+
+    // Intercept programmatic form.submit() calls (which don't fire onsubmit)
+    (function () {
+      var originalSubmit = HTMLFormElement.prototype.submit;
+      HTMLFormElement.prototype.submit = function () {
+        logSubmission('form.submit()');
+        originalSubmit.apply(this);
+      };
+    })();
   </script>
 </head>
 
@@ -21,7 +35,7 @@
     <li>No focusable text inputs between them (checkbox is ignored).</li>
     <li>No focusable text inputs after the password.</li>
   </ul>
-  <form action="#" method="post" onsubmit="handleSubmit(event)">
+  <form action="destination.html" method="get" onsubmit="handleSubmit(event)">
     <div>
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" autocomplete="username">
