auto_submit_test page, redirect to page on submission

--- a/autologin/auto_submit_test.html
+++ b/autologin/auto_submit_test.html
@@ -11,9 +11,9 @@
     }
 
     function handleSubmit(event) {
-      event.preventDefault();
-      logSubmission('onsubmit event');
-      event.target.reset();
+      // event.preventDefault();
+      // logSubmission('onsubmit event');
+      // event.target.reset();
     }
 
     // Intercept programmatic form.submit() calls (which don't fire onsubmit)
