--- a/autologin/auto_submit_test.html
+++ b/autologin/auto_submit_test.html
@@ -35,7 +35,7 @@
     <li>No focusable text inputs between them (checkbox is ignored).</li>
     <li>No focusable text inputs after the password.</li>
   </ul>
-  <form action="destination.html" method="get" onsubmit="handleSubmit(event)">
+  <form action="../destination.html" method="get" onsubmit="handleSubmit(event)">
     <div>
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" autocomplete="username">
